add: main layout and sign in/up

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "clsx": "^2.0.0",
     "next": "^13.5.4",
-    "react": "18.2.0",
+    "react": "link:@vercel/analytics/react",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
   },
