--- a/package.json
+++ b/package.json
@@ -13,19 +13,27 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.25.7",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.5.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.32.6",
     "@trpc/client": "^10.37.1",
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "lucide-react": "^0.289.0",
     "next": "^13.5.4",
+    "next-themes": "^0.2.1",
     "react": "link:@vercel/analytics/react",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "superjson": "^1.13.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -41,7 +49,7 @@
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
-    "prisma": "^5.1.1",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
